math-core/src/snapshots/math_core__tests__middle_uparrow.snap
---
source: math-core/src/lib.rs
expression: "\\left(\\frac12\\middle\\uparrow\\frac12\\right)"
---
<math>
    <mrow>
        <mo>(</mo>
        <mrow>
            <mfrac>
                <mn>1</mn>
                <mn>2</mn>
            </mfrac>
            <mo symmetric="true">↑</mo>
            <mfrac>
                <mn>1</mn>
                <mn>2</mn>
            </mfrac>
        </mrow>
        <mo>)</mo>
    </mrow>
</math>
