math-core/src/snapshots/math_core__tests__mismatched_begin_end.snap
---
source: math-core/src/lib.rs
expression: "\\begin{matrix} 1 \\end{bmatrix}"
---
Position: 17
MismatchedEnvironment {
    expected: "matrix",
    got: "bmatrix",
}
