math-core/src/snapshots/math_core__tests__mod.snap
---
source: math-core/src/lib.rs
expression: "a \\equiv r \\mod n"
---
<math>
    <mi>a</mi>
    <mo>≡</mo>
    <mi>r</mi>
    <mspace width="1em"/>
    <mtext>mod</mtext>
    <mspace width="0.33333334em"/>
    <mi>n</mi>
</math>
