math-core/src/snapshots/math_core__tests__nabla_in_mathbf.snap
---
source: math-core/src/lib.rs
expression: "\\mathbf{\\nabla} + \\nabla"
---
<math>
    <mi>𝛁</mi>
    <mo>+</mo>
    <mi mathvariant="normal">∇</mi>
</math>
