math-core/src/snapshots/math_core__tests__nested_custom_cmd.snap
---
source: math-core/src/lib.rs
expression: "\\odv{\\odv f x} x"
---
<math>
    <mfrac>
        <mrow>
            <mi mathvariant="normal">d</mi>
            <mfrac>
                <mrow>
                    <mi mathvariant="normal">d</mi>
                    <mi>f</mi>
                </mrow>
                <mrow>
                    <mi mathvariant="normal">d</mi>
                    <mi>x</mi>
                </mrow>
            </mfrac>
        </mrow>
        <mrow>
            <mi mathvariant="normal">d</mi>
            <mi>x</mi>
        </mrow>
    </mfrac>
</math>
