math-core/src/snapshots/math_core__tests__nested_transform.snap
---
source: math-core/src/lib.rs
expression: "\\mathit{\\mathbf{a}b}"
---
<math>
    <mrow>
        <mi>𝐚</mi>
        <mi>𝑏</mi>
    </mrow>
</math>
