math-core/src/snapshots/math_core__tests__no_rbrack_instead_of_bracket.snap
---
source: math-core/src/lib.rs
expression: "\\sqrt[3\\rbrack{1}"
---
Position: 17
UnclosedGroup(
    SquareBracketClose,
)
