math-core/src/snapshots/math_core__tests__not_less_than_symbol.snap
---
source: math-core/src/lib.rs
expression: "\\not< x"
---
<math>
    <mo>≮</mo>
    <mi>x</mi>
</math>
