math-core/src/snapshots/math_core__tests__notag2.snap
---
source: math-core/src/lib.rs
expression: "\\begin{align} 1\\mathbf{\\notag}\\\\2\\end{align}"
---
<math>
    <mtable displaystyle="true" style="width: 100%">
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mn>1</mn>
            </mtd>
            <mtd style="width: 50%"></mtd>
        </mtr>
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mn>2</mn>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;">
                <mtext>(1)</mtext>
            </mtd>
        </mtr>
    </mtable>
</math>
